# stacks

./: .gitignore  CMakeLists.txt  README.md  stacks.c  stacks.h
test_stacks/: CMakeLists.txt  main.c
